syntax = "proto3";

package api;
option go_package = "/api";
import "google/protobuf/timestamp.proto";

message CreateUserRequest {
  int64 id = 1;
  string name = 2;
  string password = 3;
  string email = 4;
  string phone = 5;
}

message CreateUserResponse {
  uint64 id = 1;
}

message GetUserRequest {
  uint64 id = 1;
}

message WhoIsRequest {

}

message GetUserByEmailRequest {
  string email = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message CommonUserResponse {
  bool success = 1;
  string error = 2;
}

message TslUser {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string role = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message ChangePasswordRequest {
  int64 id = 1;
  string old_password = 2;
  string new_password = 3;
  string chk_password = 4;
  bool check_old = 5;
}

service UserService {
  rpc ResetPasswordEmail(GetUserByEmailRequest) returns (CommonUserResponse){};
  rpc CheckResetPasswordToken(WhoIsRequest) returns (CommonUserResponse) {};
  rpc WhoIs(WhoIsRequest) returns (TslUser) {};
  rpc Get(GetUserRequest) returns (TslUser) {};
  rpc GetByEmail(GetUserByEmailRequest) returns (TslUser) {};
  rpc Create(CreateUserRequest) returns (CreateUserResponse) {};
  rpc Delete(DeleteUserRequest) returns (CommonUserResponse) {};
  rpc ChangePassword(ChangePasswordRequest) returns (CommonUserResponse) {};
}